[tool.poetry]
name = "langgraph-project"
version = "0.1.0"
description = "A Python project using Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.4.8"
langchain = {extras = ["anthropic"], version = "^0.3.25"}
dotenv = "^0.9.9"
ipython = "^9.3.0"
graphviz = "^0.20.3"
langchain-tavily = "^0.2.2"
langchain-openai = "^0.3.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 